@@ -1,3 +1,7 @@
+19 February 2015: Wouter
+	- Remove dead code domain_table_iterate.
+	- Fix segfault in zone reader on invalid input.
+
 5 February 2015: Wouter
 	- Fix #642: Change 'zone read with no errors' to '.. with success'.
 	  Patch from Benedikt Heine.
